--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "node": "5.10.1"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "mongodb": "^2.1.16",
+    "mongoose": "^4.4.12",
+    "morgan": "^1.7.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
