--- a/package.json
+++ b/package.json
@@ -6,18 +6,38 @@
   "engines": {
     "node": "5.10.1"
   },
+  "scripts": {
+    "start": "node startup.js",
+    "test": "gulp all-tests",
+    "test:continuous": "gulp continuous-tests",
+    "test:ut": "gulp ut-tests",
+    "test:api": "gulp api-tests"
+  },
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongodb": "^2.1.16",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
+    "rxjs": "^5.0.0-beta.5",
     "winston": "^2.2.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-mocha": "^2.2.0",
+    "istanbul": "^0.4.3",
+    "istanbul-combine": "^0.3.0",
+    "jscs": "^2.11.0",
+    "jshint": "^2.9.1",
+    "mocha": "^2.4.5",
+    "run-sequence": "^1.1.5",
+    "sinon": "^1.17.3",
+    "supertest": "^1.2.0"
   },
-  "author": "",
+  "author": "Daniel Figueiredo Caetano",
   "license": "ISC"
 }
