Defining basic authentication Supported methods are local (cash counter), facebook, google and github

--- a/.jshintrc
+++ b/.jshintrc
@@ -12,7 +12,7 @@
   "latedef": true,
   "maxparams": 5,
   "maxdepth": 5,
-  "maxcomplexity": 10,
+  "maxcomplexity": 15,
   "maxstatements": 30,
   "mocha": true,
   "newcap": true,
@@ -20,7 +20,7 @@
   "node": true,
   "noempty": true,
   "nonew": true,
-  "plusplus": true,
+  "plusplus": false,
   "undef": true,
   "unused": true,
   "strict": true,
