--- a/package.json
+++ b/package.json
@@ -14,12 +14,22 @@
     "test:api": "gulp api-tests"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
+    "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "lamb": "^0.21.0",
     "mongodb": "^2.1.16",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
-    "rxjs": "^5.0.0-beta.5",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
+    "passport-github2": "^0.1.10",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
