--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
   "dependencies": {
     "bcrypt": "^0.8.5",
     "bluebird": "^3.3.5",
-    "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.1",
-    "express": "^4.13.4",
     "express-session": "^1.13.0",
     "lamb": "^0.21.0",
     "mongodb": "^2.1.16",
@@ -30,6 +27,8 @@
     "passport-github2": "^0.1.10",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
+    "restify": "^4.0.4",
+    "restify-cookies": "^0.2.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
@@ -46,7 +45,7 @@
     "mocha": "^2.4.5",
     "run-sequence": "^1.1.5",
     "sinon": "^1.17.3",
-    "supertest": "^1.2.0"
+    "supertest-as-promised": "^3.1.0"
   },
   "author": "Daniel Figueiredo Caetano",
   "license": "ISC"
